Created Css File

--- a/week1HtmlAndCssReview.html
+++ b/week1HtmlAndCssReview.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="CssReview.css">
 <title>Page Title</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>GWDA283</h1>
+<p>Winter2018</p>
 
 </body>
 </html>
